# GenTen

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  copyright.txt  pyproject.toml
.github/workflows/: build_and_publish_to_pypi.yml  build_and_publish_to_pypi_macos.yml  build_and_publish_to_pypi_windows.yml  build_linux.yml  build_macos.yml  build_wheel_cuda.yml  build_windows.yml  buildwheels.yml  buildwheels_macos.yml  cmake-multi-platform.yml  continuous-integration-osx.yml  publish_release.yml
cmake/: CMakeInclude.h.cmake  CheckCompilerVersion.cmake  ConfigureBuildType.cmake  ConfigureLapack.cmake  genten_mpicxx_nvccwrapper.sh.tmpl
config/: CMakeLists.txt  GentenConfig.cmake.in  genten_setup_deps.cmake  genten_setup_targets.cmake
config-scripts/: README.md
config-scripts/haswell-intel/: config-genten-inline.sh  config-genten.sh  config-kokkos.sh  setup_env_hansen.sh  setup_env_kahuna.sh
config-scripts/haswell-intel-hansen/: config-genten.sh
config-scripts/k80-gnu/: config-genten-inline.sh  config-kokkos.sh  setup_env_hansen.sh  setup_env_kahuna.sh
config-scripts/k80-haswell-gnu/: config-genten-inline.sh  config-kokkos.sh
config-scripts/knl-intel/: config-genten  config-genten-inline.sh  config-genten.sh  config-kokkos  config-kokkos.sh  setup_env_ellis.sh
config-scripts/p100-gnu/: config-genten  config-genten-inline  config-kokkos  setup_env_ride.sh
config-scripts/p100-power8-gnu/: config-genten-inline.sh  config-kokkos.sh
data/: A_tensor.txt  B_matrix.txt  C_sptensor.txt  D_matrix.txt  E_ktensor.txt  aminoacid-cpals-dense.json  aminoacid-cpals.json  aminoacid-cpopt-lbfgsb.json  aminoacid-cpopt-rol-hess.json  aminoacid-cpopt-rol.json  aminoacid-cpopt.json  aminoacid-gcpfed.json  aminoacid-gcpopt-lbfgsb.json  aminoacid-gcpopt-rol.json  aminoacid-gcpsgd-dense.json  aminoacid-gcpsgd.json  aminoacid-sgd-dense.json  aminoacid-sgd-dist.json  aminoacid-sgd.json  aminoacid_data.txt  aminoacid_data_dense.txt  aminoacid_data_nn.txt  random-cpals.json  rol.xml  rol_truncated_cg.xml  test_sptensor.txt
docker/: Dockerfile-sycl-dpcpp-cuda-examples  Dockerfile-sycl-kokkos-base  Dockerfile-sycl-kokkos-derived  Dockerfile_clang_openmp_image  Dockerfile_clang_sycl_cuda_image  Dockerfile_gcc_cuda_image  Dockerfile_gcc_openmp_image  Dockerfile_gnu_clang_build  Dockerfile_hip  Dockerfile_sycl_base
driver/: Genten_Driver.cpp  Genten_Driver_CpAls.cpp  Genten_Driver_Utils.h  Genten_Driver_Utils.hpp  Genten_MPISGD_Driver.cpp  key_scan_test.cpp  run_cpals.py  run_sgd.py  seg_scan_team_test.cpp  seg_scan_test.cpp
joint_moments/: CMakeLists.txt  Genten_ComputePrincipalKurtosisVectors.cpp  Genten_ComputePrincipalKurtosisVectors.hpp  Genten_FormCokurtosisSlice.hpp  Genten_HigherMoments.cpp  Genten_HigherMoments.hpp  README.md  compute_krp.hpp  gt_higher_momentsConfig.cmake.in  perform_eigen_decomp.hpp
maintenance/: copyright_header_cpp.txt  copyright_header_shell.txt  update_headers.sh
matlab/: Genten_Matlab.cpp  Genten_Matlab.hpp  Genten_Matlab_ComputePermutation.cpp  Genten_Matlab_Driver.cpp  Genten_Matlab_Finalize.cpp  Genten_Matlab_GCP_Gradient.cpp  Genten_Matlab_GCP_Sample.cpp  Genten_Matlab_GCP_Value.cpp  Genten_Matlab_Initialize.cpp  Genten_Matlab_Innerprod.cpp  Genten_Matlab_MTTKRP.cpp  Genten_Matlab_Online_GCP.cpp  README.md  gt_cp.txt  gt_finalize.txt
performance/: Genten_CpAlsAminoAcid.cpp  Genten_CpAlsRandomKtensor.cpp  Genten_CpAlsRandomKtensor_Sweep.cpp  Genten_MTTKRP.cpp  Genten_MTTKRP_Sweep.cpp  run_cpals_scaling.py
python/: CMakeLists.txt  README.md
python/example/: aminoacid_cpals_dense.py  aminoacid_cpals_sparse.py  pyttb_cpals_dense.py  pyttb_cpals_sparse.py  streaming_gcp.ipynb  streaming_gcp_chicago_binary.ipynb  streaming_gcp_chicago_poisson.ipynb  streaming_gcp_synthetic_gaussian.ipynb
python/physics_utils/: decompose_torus.py  test_torus_to_tensor.py  torus_to_tensor.py
python/pyGenten/: __init__.py  solvers.py
python/pygenten/: __init__.py  helpers.py  solvers.py  utils.py
python/src/: CMakeLists.txt  Genten_Pybind11.cpp  Genten_Pybind11_classes.cpp  Genten_Pybind11_classes.hpp  Genten_Pybind11_include.hpp  Genten_Pybind11_phys_utils.cpp
python/test/: import_test.py  test_AlgParams.py  test_Ktensor.py  test_PerfHistory.py  test_cpals.py  test_cpals_aminoacid.py  test_cpals_dense.py  test_online_gcp.py  test_pyttb.py
src/: Genten_AlgParams.cpp  Genten_AlgParams.hpp  Genten_Annealer.hpp  Genten_Array.cpp  Genten_Array.h  Genten_Array.hpp  Genten_Boost.hpp  Genten_CP_Model.hpp  Genten_CpAls.cpp  Genten_CpAls.h  Genten_CpAls.hpp  Genten_CublasHandle.cpp  Genten_CublasHandle.h  Genten_CublasHandle.hpp  Genten_CusolverHandle.cpp  Genten_CusolverHandle.h  Genten_CusolverHandle.hpp  Genten_DistContext.cpp  Genten_DistContext.hpp  Genten_DistCpAls.hpp  Genten_DistFacMatrix.hpp  Genten_DistGCP.hpp  Genten_DistIO.hpp  Genten_DistKtensor.hpp  Genten_DistKtensorUpdate.cpp  Genten_DistKtensorUpdate.hpp  Genten_DistMttkrp.hpp  Genten_DistSpSystem.cpp  Genten_DistSpSystem.hpp  Genten_DistSpTensor.cpp  Genten_DistSpTensor.hpp  Genten_DistTensor.hpp  Genten_DistTensorContext.cpp  Genten_DistTensorContext.hpp  Genten_Driver.cpp  Genten_Driver.hpp  Genten_FacMatArray.cpp  Genten_FacMatArray.h  Genten_FacMatArray.hpp  Genten_FacMatrix.cpp  (+159 more)
test/: CMakeLists.txt  Genten_TTM_test.cpp  Genten_Test_Array.cpp  Genten_Test_CpAls.cpp  Genten_Test_CpOpt.cpp  Genten_Test_CpOptLbfgsb.cpp  Genten_Test_CpOptRol.cpp  Genten_Test_Exodus.cpp  Genten_Test_FacMatrix.cpp  Genten_Test_GCP_Opt.cpp  Genten_Test_GCP_SGD.cpp  Genten_Test_HessVec.cpp  Genten_Test_IOtext.cpp  Genten_Test_IndxArray.cpp  Genten_Test_Ktensor.cpp  Genten_Test_MixedFormats.cpp  Genten_Test_MomentTensor.cpp  Genten_Test_Sptensor.cpp  Genten_Test_TTM.cpp  Genten_Test_Tensor.cpp  Genten_Test_UnitTests.cpp  Genten_Test_Utils.cpp  Genten_Test_Utils.h  Genten_Test_Utils.hpp  Unit_Tests_Main.cpp
tools/: CMakeLists.txt  KTensor_compare.cpp  convert_tensor.cpp  mpi_read_binary_tensor.cpp  read_binary_header.cpp  read_binary_tensor.cpp  sparse_tensor_to_binary.cpp
(+106 files in other folders)
